--- a/data/open_data.ipynb
+++ b/data/open_data.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
        "[5342446 rows x 5 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,6 +185,132 @@
    "source": [
     "df"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['ME_L', 'LA_L', 'UNASGD', 'LOP_L', 'LO_L', 'AVLP_L', 'SLP_L',\n",
+       "       'LH_L', 'PVLP_L', 'PLP_L', 'AOTU_L', 'AME_L', 'GNG', 'AL_R',\n",
+       "       'LAL_R', 'ME_R', 'AVLP_R', 'SMP_R', 'AMMC_L', 'SMP_L', 'MB_VL_R',\n",
+       "       'LO_R', 'MB_PED_R', 'VES_L', 'CRE_R', 'AMMC_R', 'SCL_R', 'LOP_R',\n",
+       "       'PLP_R', 'CRE_L', 'LH_R', 'SPS_R', 'VES_R', 'PVLP_R', 'PB',\n",
+       "       'ICL_L', 'ATL_L', 'PRW', 'SCL_L', 'CAN_R', 'LAL_L', 'SPS_L',\n",
+       "       'IPS_L', 'WED_L', 'IPS_R', 'MB_VL_L', 'FB', 'SLP_R', 'SIP_R',\n",
+       "       'AL_L', 'EPA_L', 'IB_R', 'FLA_R', 'SIP_L', 'SAD', 'WED_R', 'EB',\n",
+       "       'FLA_L', 'MB_PED_L', 'BU_R', 'IB_L', 'MB_ML_L', 'MB_CA_L', 'GOR_R',\n",
+       "       'LA_R', 'ICL_R', 'MB_CA_R', 'EPA_R', 'GOR_L', 'AOTU_R', 'MB_ML_R',\n",
+       "       'ATL_R', 'NO', 'AME_R', 'GA_L', 'BU_L', 'OCG', 'CAN_L', 'GA_R'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['neuropil'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['GABA', 'ACH', 'GLUT', 'OCT', 'SER', 'DA'], dtype=object)"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['nt_type'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "130183"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df['post_root_id'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "137518"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df['pre_root_id'].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Cell Types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
