--- a/data/open_data.ipynb
+++ b/data/open_data.ipynb
@@ -286,17 +286,241 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>root_id</th>\n",
+       "      <th>primary_type</th>\n",
+       "      <th>additional_type(s)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>720575940596125868</td>\n",
+       "      <td>T5c</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>720575940597856265</td>\n",
+       "      <td>Tm16</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>720575940597944841</td>\n",
+       "      <td>Tm7</td>\n",
+       "      <td>CB3851</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>720575940598267657</td>\n",
+       "      <td>TmY15</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>720575940599333574</td>\n",
+       "      <td>Tm1</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137672</th>\n",
+       "      <td>720575940661335681</td>\n",
+       "      <td>CB0180</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137673</th>\n",
+       "      <td>720575940661336193</td>\n",
+       "      <td>TmY3</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137674</th>\n",
+       "      <td>720575940661337217</td>\n",
+       "      <td>KCab-p</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137675</th>\n",
+       "      <td>720575940661338497</td>\n",
+       "      <td>CB0904</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>137676</th>\n",
+       "      <td>720575940661339777</td>\n",
+       "      <td>R1-6</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>137677 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                   root_id primary_type additional_type(s)\n",
+       "0       720575940596125868          T5c                NaN\n",
+       "1       720575940597856265         Tm16                NaN\n",
+       "2       720575940597944841          Tm7             CB3851\n",
+       "3       720575940598267657        TmY15                NaN\n",
+       "4       720575940599333574          Tm1                NaN\n",
+       "...                    ...          ...                ...\n",
+       "137672  720575940661335681       CB0180                NaN\n",
+       "137673  720575940661336193         TmY3                NaN\n",
+       "137674  720575940661337217       KCab-p                NaN\n",
+       "137675  720575940661338497       CB0904                NaN\n",
+       "137676  720575940661339777         R1-6                NaN\n",
+       "\n",
+       "[137677 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_types = pd.read_csv('consolidated_cell_types.csv')\n",
+    "df_types "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['KCapbp-ap2',\n",
+       " 'KCg-m',\n",
+       " 'KCab',\n",
+       " 'KCg-d',\n",
+       " 'KCab-p',\n",
+       " 'KCapbp-ap1',\n",
+       " 'KCapbp-m',\n",
+       " 'KCg-s2',\n",
+       " 'KCg-s3',\n",
+       " 'KCg-s1']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kc_types = [x for x in df_types['primary_type'].unique() if \"KC\" in x]\n",
+    "kc_types"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "KCapbp-ap1\n",
+    "KCapbp-ap2\n",
+    "KCapbp-m\n",
+    "\n",
+    "KCab\n",
+    "KCab-p\n",
+    "\n",
+    "KCg-d\n",
+    "KCg-m"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([720575940602553568, 720575940602564320, 720575940602605536, ...,\n",
+       "       720575940660047489, 720575940661275009, 720575940661337217],\n",
+       "      shape=(5177,))"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_types[df_types['primary_type'].isin(kc_types)]['root_id'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['APL']"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "apl_types = [x for x in df_types['primary_type'].unique() if \"APL\" in x]\n",
+    "apl_types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_types[df_types['primary_type']=='APL'])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -310,7 +534,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# define mushroom body regions\n",
+    "mb_regions = [\n",
+    "    \"MB_VL_L\", \"MB_VL_R\",\n",
+    "    \"MB_PED_L\", \"MB_PED_R\",\n",
+    "    \"MB_ML_L\", \"MB_ML_R\",\n",
+    "    \"MB_CA_L\", \"MB_CA_R\"\n",
+    "]"
+   ]
   },
   {
    "cell_type": "code",
