--- a/neuprint/open_data.ipynb
+++ b/neuprint/open_data.ipynb
@@ -2228,11 +2228,280 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "lets try keeping only the Kenyon Cells and recurrent connections between them."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bodyId_pre</th>\n",
+       "      <th>bodyId_post</th>\n",
+       "      <th>weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>67432</th>\n",
+       "      <td>301314154</td>\n",
+       "      <td>549576424</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67433</th>\n",
+       "      <td>301314154</td>\n",
+       "      <td>736126717</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67435</th>\n",
+       "      <td>301314154</td>\n",
+       "      <td>829568160</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67437</th>\n",
+       "      <td>301314154</td>\n",
+       "      <td>5812983309</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67438</th>\n",
+       "      <td>301314154</td>\n",
+       "      <td>5812983575</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3547238</th>\n",
+       "      <td>5901202076</td>\n",
+       "      <td>394755376</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3547239</th>\n",
+       "      <td>5901202076</td>\n",
+       "      <td>5812982760</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3547240</th>\n",
+       "      <td>5901202076</td>\n",
+       "      <td>394755632</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3547242</th>\n",
+       "      <td>5901202076</td>\n",
+       "      <td>5813022050</td>\n",
+       "      <td>6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3547244</th>\n",
+       "      <td>5901202076</td>\n",
+       "      <td>477262101</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>340367 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         bodyId_pre  bodyId_post  weight\n",
+       "67432     301314154    549576424       1\n",
+       "67433     301314154    736126717       2\n",
+       "67435     301314154    829568160       1\n",
+       "67437     301314154   5812983309       1\n",
+       "67438     301314154   5812983575       1\n",
+       "...             ...          ...     ...\n",
+       "3547238  5901202076    394755376       1\n",
+       "3547239  5901202076   5812982760       4\n",
+       "3547240  5901202076    394755632       1\n",
+       "3547242  5901202076   5813022050       6\n",
+       "3547244  5901202076    477262101       5\n",
+       "\n",
+       "[340367 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kc_connections = df_connections[\n",
+    "    df_connections['bodyId_post'].isin(kc_neurons['bodyId']) &\n",
+    "    df_connections['bodyId_pre'].isin(kc_neurons['bodyId'])\n",
+    "]\n",
+    "kc_connections"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>bodyId</th>\n",
+       "      <th>type</th>\n",
+       "      <th>instance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>484</th>\n",
+       "      <td>300968622</td>\n",
+       "      <td>KCab-m</td>\n",
+       "      <td>KCab-m_R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>487</th>\n",
+       "      <td>301309622</td>\n",
+       "      <td>KCab-c</td>\n",
+       "      <td>KCab-c_R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>488</th>\n",
+       "      <td>301314150</td>\n",
+       "      <td>KCab-c</td>\n",
+       "      <td>KCab-c_R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>489</th>\n",
+       "      <td>301314154</td>\n",
+       "      <td>KCab-c</td>\n",
+       "      <td>KCab-c_R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>490</th>\n",
+       "      <td>301314208</td>\n",
+       "      <td>KCab-c</td>\n",
+       "      <td>KCab-c_R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21607</th>\n",
+       "      <td>5901202076</td>\n",
+       "      <td>KCab-c</td>\n",
+       "      <td>KCab-c_R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21608</th>\n",
+       "      <td>5901202102</td>\n",
+       "      <td>KCg-m</td>\n",
+       "      <td>KCg-m_R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21635</th>\n",
+       "      <td>5901205770</td>\n",
+       "      <td>KCab-s</td>\n",
+       "      <td>KCab-s_R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21642</th>\n",
+       "      <td>5901207528</td>\n",
+       "      <td>KCab-c</td>\n",
+       "      <td>KCab-c_R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21719</th>\n",
+       "      <td>5901225361</td>\n",
+       "      <td>KCg-m</td>\n",
+       "      <td>KCg-m_R</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1927 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           bodyId    type  instance\n",
+       "484     300968622  KCab-m  KCab-m_R\n",
+       "487     301309622  KCab-c  KCab-c_R\n",
+       "488     301314150  KCab-c  KCab-c_R\n",
+       "489     301314154  KCab-c  KCab-c_R\n",
+       "490     301314208  KCab-c  KCab-c_R\n",
+       "...           ...     ...       ...\n",
+       "21607  5901202076  KCab-c  KCab-c_R\n",
+       "21608  5901202102   KCg-m   KCg-m_R\n",
+       "21635  5901205770  KCab-s  KCab-s_R\n",
+       "21642  5901207528  KCab-c  KCab-c_R\n",
+       "21719  5901225361   KCg-m   KCg-m_R\n",
+       "\n",
+       "[1927 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kc_neurons"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "so now we have all 1927 neurons in the Right MB of Drosophila, and the 340367 connections between pairs of these"
+   ]
   },
   {
    "cell_type": "code",
