--- a/neuprint/open_data.ipynb
+++ b/neuprint/open_data.ipynb
@@ -2369,6 +2369,46 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1927"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(kc_connections['bodyId_pre'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1927"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(kc_connections['bodyId_post'].unique())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 32,
    "metadata": {},
    "outputs": [
@@ -2501,6 +2541,13 @@
    "metadata": {},
    "source": [
     "so now we have all 1927 neurons in the Right MB of Drosophila, and the 340367 connections between pairs of these"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "what i need next is to create a network model of this hemispheric MB. then inputs and APL and ouputs can be generic"
    ]
   },
   {
