--- a/neuprint/open_data.ipynb
+++ b/neuprint/open_data.ipynb
@@ -4817,6 +4817,37 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle_path = \"../exports/name_to_index\"\n",
+    "with open(pickle_path, \"wb\") as f:\n",
+    "    pickle.dump(name_to_index, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle_path_ = \"../exports/connectivity_matrix\"\n",
+    "with open(pickle_path_, \"wb\") as f:\n",
+    "    pickle.dump(connectivity_matrix, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
