--- a/open_network.ipynb
+++ b/open_network.ipynb
@@ -1094,11 +1094,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from recurrent_network import Recurrent_Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# what do we need to define a recurrent network?\n",
     "\n",
     "# the random PN to KC connections\n",
     "# the KC self connections alongside their weights\n",
     "# the mode of APL normalisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net = Recurrent_Network(N_PN=100, N_KC=500)"
    ]
   }
  ],
