adding open network with run sequence

--- a/open_network.ipynb
+++ b/open_network.ipynb
@@ -9,13 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import pickle"
+    "import pickle\n",
+    "import torch"
    ]
   },
   {
@@ -27,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1036,7 +1037,7 @@
        " ...}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1052,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1067,7 +1068,7 @@
        "       [0., 0., 0., ..., 0., 0., 0.]], shape=(1927, 1927))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,6 +1083,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 1, 0, ..., 0, 1, 0],\n",
+       "       ...,\n",
+       "       [0, 0, 0, ..., 0, 0, 0],\n",
+       "       [0, 0, 1, ..., 0, 0, 0],\n",
+       "       [0, 0, 0, ..., 0, 0, 0]], shape=(1927, 1927))"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(connectivity_matrix>=1)*1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-0.3794,  1.0963,  0.2195,  ...,  0.6509, -0.4981,  0.6857],\n",
+       "        [ 0.6664,  1.8204, -0.2726,  ...,  0.8245, -0.7506,  0.7837],\n",
+       "        [-0.6757, -0.3425,  1.8593,  ..., -1.0496,  0.7475,  0.3041],\n",
+       "        ...,\n",
+       "        [ 0.9772, -0.5763,  1.3348,  ...,  0.2973, -0.3568,  1.1278],\n",
+       "        [ 0.4423, -1.9060, -1.5168,  ..., -0.6801,  0.2760, -0.4893],\n",
+       "        [ 0.5688, -1.1642, -1.1342,  ...,  0.3386,  0.3214, -0.9741]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rand_same_shape = torch.randn((1927, 1927))\n",
+    "rand_same_shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1090,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1099,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1161,125 @@
     "\n",
     "# the random PN to KC connections\n",
     "# the KC self connections alongside their weights\n",
-    "# the mode of APL normalisation"
+    "# the mode of APL normalisation\n",
+    "\n",
+    "# I think I should pass in the weights directly so I can create and store them outside of class.\n",
+    "# I need weights for PN to KC and then KC to KC. I will think of APL later."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_PN = 100\n",
+    "n_KC = 1927\n",
+    "\n",
+    "# random PN -> KC weights\n",
+    "W = torch.rand(n_PN, n_KC)  # values in [0, 1]\n",
+    "\n",
+    "# random KC recurrent weights\n",
+    "R = torch.rand(n_KC, n_KC)  # values in [0, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net = Recurrent_Network(n_PN=100, n_KC=1927, W=W, R=R)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Try it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1927])"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x = torch.rand(n_PN)\n",
+    "y = net.forward(x)\n",
+    "y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[2.0360e+01, 2.3162e+01, 2.3697e+01,  ..., 2.5166e+01, 2.2120e+01,\n",
+       "         2.5459e+01],\n",
+       "        [2.2903e+04, 2.2155e+04, 2.2659e+04,  ..., 2.2367e+04, 2.1933e+04,\n",
+       "         2.2259e+04],\n",
+       "        [2.2039e+07, 2.1372e+07, 2.1819e+07,  ..., 2.1570e+07, 2.1070e+07,\n",
+       "         2.1433e+07],\n",
+       "        ...,\n",
+       "        [       inf,        inf,        inf,  ...,        inf,        inf,\n",
+       "                inf],\n",
+       "        [       inf,        inf,        inf,  ...,        inf,        inf,\n",
+       "                inf],\n",
+       "        [       inf,        inf,        inf,  ...,        inf,        inf,\n",
+       "                inf]], grad_fn=<CatBackward0>)"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X = torch.rand(100, n_PN)\n",
+    "KCseq = net.run_sequence(X)\n",
+    "KCseq"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "the infinities show up because values explode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([100, 1927])"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "KCseq.shape"
    ]
   },
   {
@@ -1115,9 +1287,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "net = Recurrent_Network(N_PN=100, N_KC=500)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
