--- a/open_network.ipynb
+++ b/open_network.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -1037,7 +1037,7 @@
        " ...}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1053,7 +1053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1068,7 @@
        "       [0., 0., 0., ..., 0., 0., 0.]], shape=(1927, 1927))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1099,7 +1099,7 @@
        "       [0, 0, 0, ..., 0, 0, 0]], shape=(1927, 1927))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1110,22 +1110,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[-0.3794,  1.0963,  0.2195,  ...,  0.6509, -0.4981,  0.6857],\n",
-       "        [ 0.6664,  1.8204, -0.2726,  ...,  0.8245, -0.7506,  0.7837],\n",
-       "        [-0.6757, -0.3425,  1.8593,  ..., -1.0496,  0.7475,  0.3041],\n",
+       "tensor([[ 0.2859, -1.6683, -0.8370,  ..., -1.4059,  0.0313,  0.7054],\n",
+       "        [-0.8029,  0.0670,  0.2696,  ...,  1.5510,  0.0556,  0.7555],\n",
+       "        [ 1.0389, -0.9624, -0.0721,  ...,  2.0913,  0.3560,  1.0917],\n",
        "        ...,\n",
-       "        [ 0.9772, -0.5763,  1.3348,  ...,  0.2973, -0.3568,  1.1278],\n",
-       "        [ 0.4423, -1.9060, -1.5168,  ..., -0.6801,  0.2760, -0.4893],\n",
-       "        [ 0.5688, -1.1642, -1.1342,  ...,  0.3386,  0.3214, -0.9741]])"
+       "        [ 0.2567, -1.0500,  0.8013,  ..., -0.5597,  1.0207, -0.3559],\n",
+       "        [ 2.0418, -1.4944, -0.1159,  ...,  0.1455, -0.2814, -0.6231],\n",
+       "        [ 2.4859,  1.6011,  0.1006,  ...,  0.3618, -1.6996, -0.2975]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1144,7 +1144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1153,7 +1153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1169,7 +1169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1185,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1210,7 +1210,7 @@
        "torch.Size([1927])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1223,28 +1223,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([[2.0360e+01, 2.3162e+01, 2.3697e+01,  ..., 2.5166e+01, 2.2120e+01,\n",
-       "         2.5459e+01],\n",
-       "        [2.2903e+04, 2.2155e+04, 2.2659e+04,  ..., 2.2367e+04, 2.1933e+04,\n",
-       "         2.2259e+04],\n",
-       "        [2.2039e+07, 2.1372e+07, 2.1819e+07,  ..., 2.1570e+07, 2.1070e+07,\n",
-       "         2.1433e+07],\n",
+       "tensor([[0.0000e+00, 0.0000e+00, 0.0000e+00,  ..., 0.0000e+00, 0.0000e+00,\n",
+       "         7.6513e-01],\n",
+       "        [1.3541e+02, 4.9029e+01, 4.1829e+02,  ..., 3.8323e+02, 0.0000e+00,\n",
+       "         1.0624e+02],\n",
+       "        [1.1360e+05, 7.4572e+04, 4.2578e+05,  ..., 3.7828e+05, 0.0000e+00,\n",
+       "         6.0450e+04],\n",
        "        ...,\n",
-       "        [       inf,        inf,        inf,  ...,        inf,        inf,\n",
-       "                inf],\n",
-       "        [       inf,        inf,        inf,  ...,        inf,        inf,\n",
-       "                inf],\n",
-       "        [       inf,        inf,        inf,  ...,        inf,        inf,\n",
-       "                inf]], grad_fn=<CatBackward0>)"
+       "        [       nan,        nan,        nan,  ...,        nan,        nan,\n",
+       "                nan],\n",
+       "        [       nan,        nan,        nan,  ...,        nan,        nan,\n",
+       "                nan],\n",
+       "        [       nan,        nan,        nan,  ...,        nan,        nan,\n",
+       "                nan]], grad_fn=<CatBackward0>)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1264,7 +1264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1273,7 +1273,7 @@
        "torch.Size([100, 1927])"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
